# tdigest-rs

./: .gitignore  BUILD_OPTIMIZATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  create-release.yml  nudge.yml  python.yml  release.yml  rust.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/benchmarks/: run.py
bindings/python/src/: lib.rs
bindings/python/tdigest_rs/: __init__.py  lib.py
bindings/python/tests/: conftest.py  constants.py  test_distributions.py  test_tdigest.py  utils.py
scripts/: build-all.sh
src/: core.rs  lib.rs  scale.rs  simd.rs  traits.rs
