[package]
name = "tdigest_core"
version = "0.2.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["bindings/python"]

[dependencies]
anyhow = "1.0.100"
itertools = "0.14.0"
num = "0.4.3"
num-traits = "0.2.19"

[features]
default = []

[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"           # Link-time optimization (thin for faster builds)
codegen-units = 1      # Better optimization at cost of compile time
panic = "abort"        # Smaller binaries, faster execution
strip = true          # Remove debug symbols from release builds

[profile.release-fast]
inherits = "release"
lto = "fat"           # Full LTO for maximum performance
codegen-units = 1
panic = "abort"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "s"       # Optimize for size
lto = "fat"
strip = true

# Profile for development with some optimizations
[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = true
