[package]
name = "tdigest_rs"
version = "0.3.0"
edition = "2021"

[lib]
name = "tdigest_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = [
    "extension-module",
    "abi3-py37",
    "anyhow",
] }
numpy = "0.26.0"
ndarray = "0.16.1"
tdigest_core = { version = "0.3.0", path = "../../" }
